# D4V

./: .gitignore  QWEN.md  README.md  agent.md  bench_output.txt  pyproject.toml  run_debug.bat  run_live.bat  run_overlay.bat  test_overlay.py  test_overlay_live.py  test_tkinter.py
.github/workflows/: build-windows.yml
docs/: CUSTOM_TRAINING_GUIDE.md  DEPLOYMENT_COMPLETE.md  DETECTION_FIX.md  GAME_OVERLAY.md  GUI_UPDATED.md  PERFORMANCE_FIX.md  README.md  TESSERACT_INSTALL.md  THRESHOLD_FIX.md  TRAINING_SUMMARY.md  batch-processing-guide.md  gpu-acceleration-guide.md  training-guide.md  training-results.md
docs/plans/: 2026-03-25-d4-combat-overlay.md  2026-03-25-first-real-prototype.md  detection-improvements-final.md  detection-improvements-plan.md  detection-improvements-progress.md
docs/research/: 2026-03-25-diablo4-overlay-research.md
docs/specs/: mvp.md
docs/testing/: first-capture-round.md
models/: confidence_model_v2.joblib
reports/: training_results.json
scripts/: benchmark_pipeline.py  build_windows.ps1  collect_training_data.py  debug_vision.py  estimate_training_potential.py  extract_training_data.py  extract_training_data_simple.py  generate_synthetic_fixtures.py  live_debug_full.py  live_debug_session.py  process_all_replays.py  process_all_replays_parallel.py  train_confidence_model.py  train_custom_model.py  verify_deployment.py
src/d4v/: app.py  desktop.py  runtime_paths.py
tests/: test_desktop.py  test_smoke.py
tests/benchmark/: test_annotation.py  test_metrics.py  test_runner.py
tests/capture/: test_game_window.py  (+2 more)
(+106 files in other folders)
